Some block entities (<500 errors to go)